# thesis-rocket-trajectory-optimizer

./: .clang-format  .flake8  .gitignore  ARCHITECTURE_FIXES_SUMMARY.md  CMakeLists.txt  Dockerfile  HEAD_evaluate_pinn.sh  Makefile.wp2  Makefile.wp3  README.md  SETUP_GUIDE.md  config.yaml  coverage.xml  pyproject.toml  requirements.txt  run_evaluation.py  structure.md
.github/workflows/: ci.yml
Makefile/src/: main.cpp
build_clean/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  pinn_rocket_lib.vcxproj  pinn_rocket_lib.vcxproj.filters  pinn_rocket_trajectory.sln  run_trajectory_demo.vcxproj  test_dynamics.vcxproj  test_dynamics.vcxproj.filters  validate_dynamics.vcxproj  validate_dynamics.vcxproj.filters
checkpoints/: pinn_model.pth
configs/: dataset.yaml  dataset_smoke.yaml  limits.yaml  model.yaml  model_B_sequence.yaml  model_C1_hybrid.yaml  model_C2.yaml  model_C3.yaml  model_C_hybrid.yaml  model_direction_d.yaml  model_direction_d1.yaml  model_direction_d15.yaml  model_direction_d151.yaml  model_direction_d152.yaml  model_latent_ode.yaml  ocp.yaml  phys.yaml  pinn_config.yaml  scales.yaml  train.yaml  train_C2.yaml  train_C2_improved.yaml  train_C3.yaml  train_an.yaml  train_an_fixed.yaml  train_an_v2.yaml  train_direction_d.yaml  train_direction_d1.yaml  train_direction_d15.yaml  train_direction_d151.yaml  train_direction_d152.yaml  train_direction_d153.yaml  train_direction_d153_v2.yaml  train_direction_d154.yaml  train_hybrid.yaml  train_hybrid_c1.yaml  train_latent_ode.yaml  train_sequence.yaml
cpp/: CMakeLists.txt
data/: README.md
data/processed/: splits.json  test.h5  val.h5
data/processed_v2/: test.h5  val.h5
data/raw/: case_test_0.h5  case_test_1.h5  case_test_10.h5  case_test_11.h5  case_test_12.h5  case_test_13.h5  case_test_14.h5  case_test_15.h5  case_test_16.h5  case_test_17.h5  case_test_18.h5  case_test_19.h5  case_test_2.h5  case_test_3.h5  case_test_4.h5  case_test_5.h5  case_test_6.h5  case_test_7.h5  case_test_8.h5  case_test_9.h5  case_train_0.h5  case_train_1.h5  case_train_10.h5  case_train_100.h5  case_train_101.h5  case_train_102.h5  case_train_103.h5  case_train_104.h5  case_train_105.h5  case_train_106.h5  case_train_107.h5  case_train_108.h5  case_train_109.h5  case_train_11.h5  case_train_110.h5  case_train_111.h5  case_train_112.h5  case_train_113.h5  case_train_114.h5  case_train_115.h5  (+121 more)
docs/: ARCHITECTURE_CHANGELOG.md  Contributing.md  DATA.md  DESIGN.md  EVALUATION_REPORT_INDEX.md  EVALUATION_REPORT_README.md  PARAMETERS.md  PHASE_SCHEDULE_EXPLANATION.md  PHYSICS_IMPLEMENTATION.md  PHYSICS_MODELS_CATALOG.md  PINN_v2_Refactor_Directions.md  PROJECT_GUIDE_6DOF_PINN.md  QUICK_START_HSL.md  README.md  RESULTS_AND_VALIDATION.md  SETUP.md  SETUP_ENVIRONMENT.md  SETUP_HSL_MUMPS.md  UI_ROCKET_SHAPE_INTEGRATION.md  WINDOWS_SETUP.md  WP1_TO_WP3_VALIDATION_SUMMARY.md  architecture_diagram.md  brief#1.md  ci_setup.md  design.md  expANAL_SOLS.md  hsl_setup_complete.md  task1_summary.md  thesis_notes.md  wp1_comprehensive_description.md  wp1_plus_summary.md  wp2_comprehensive_description.md  wp3_comprehensive_description.md  wp3_conda_setup.md  wp3_finalization.md  wp3_placeholder_fixes.md  wp3_preflight_checklist.md  wp3_ready_for_wp4.md  wp4_comprehensive_description.md
docs/latex/: INSTALL.md  README.md  abstract.tex  appendix.tex  conclusion.tex  cover.tex  direction_an_diagram.fdb_latexmk  direction_an_diagram.fls  direction_an_diagram.tex  discussion.tex  install_tex_packages.sh  introduction.fdb_latexmk  introduction.fls  introduction.tex  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.tex  main.toc  main.xdv  materials_methods.tex  references.bib  result.tex  test.tex
docs/nháp/: IMPLEMENTATION_OVERVIEW.md  WP_guide.md
experiments/: wp2_benchmark.json  wp2_robustness.json
experiments/exp12_26_11_direction_d152_horizontal_suppression/: TRAINING_IMPROVEMENTS_SUMMARY.md  phase2_evaluation_results.json
include/: config.h.in
notebooks/: 00-types-visualization.ipynb  02-ocp-demo.ipynb  04-pinn-training.ipynb
python/data_gen/: __init__.py  generate_dataset.py  solve_ocp.py  validate_wp2_vs_wp1.py
reports/: DATASET_CARD.json
scripts/: benchmark_solver.py  build_casadi_ipopt.sh  check_requirements.py  evaluate_pinn.sh  gen_data.sh  generate_evaluation_report.py  make_splits.sh  plot_quick_checks.py  plot_trajectory.py  robustness_sweep.py  simple_plot.py  test_linear_solvers.py  test_no_scaling.py  train_pinn.sh  train_residual.sh  validate_wp2_full.py  validate_wp3.sh  validate_wp3_conda.sh  verify_wp3_final.py
src/data/: __init__.py  generator.py  preprocess.py  preprocess_v2.py  sampler.py  storage.py
src/eval/: metrics.py  visualize_pinn.py
src/models/: __init__.py  architectures.py  branches.py  coordination.py  direction_an_pinn.py  direction_d_pinn.py  hybrid_pinn.py  input_block_v2.py  latent_ode.py  physics_layers.py  pinn.py  residual_net.py  sequence_pinn.py  shared_stem.py
src/physics/: atmosphere.cpp  atmosphere.hpp  constraints.cpp  constraints.hpp  derivatives_v2.py  dynamics.cpp  dynamics.hpp  dynamics.py  dynamics_pytorch.py  integrator.cpp  integrator.hpp  physics_residual_layer.py  smooth_functions.hpp  types.hpp  utils.hpp
src/solver/: __init__.py  collocation.py  constraints.py  dynamics_casadi.py  transcription.py  utils.py
tests/: simple_test.cpp  test_constraints.cpp  test_constraints_clean.py  test_control_unit_vector.py  test_cpp_python_parity.py  test_dynamics.cpp  test_generator_success_rate.py  test_mass_monotonic.py  test_processed_shapes.py  test_python.py  test_scaling_roundtrip.py  test_schema_consistency.py  test_solver.py  test_solver_coverage.py  test_solver_edge_cases.py  test_solver_integration.py  test_solver_integration_full.py  test_split_stratification.py  test_types.cpp  test_velocity_verification.py  validate_dynamics.cpp
ui/: README.md  app.py  requirements.txt  sample_config.json
(+177 files in other folders)
